--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@
   --background-color: black;
 }
 
+html,
+body {
+  height: 100%; /* take full height of screen */
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+  color: white; /* pushes footer to bottom */
+}
+
 body {
   font-family: cursive;
   margin: 0;
@@ -16,34 +29,28 @@ footer {
   text-align: center;
   background-color: var(--primary-color);
 }
-main{
-    color: white;
-}
-
-
 
 .site-title {
-  color: white;           /* matches nav links */
-  font-size: 1.5rem;      /* bigger than the links */
+  color: white; /* matches nav links */
+  font-size: 1.5rem; /* bigger than the links */
   margin: 0;
-  padding: 0.5rem 1rem;   /* adds spacing inside the bar */
+  padding: 0.5rem 1rem; /* adds spacing inside the bar */
 }
 
 /* Navigation */
 .nav__list {
   display: flex;
   justify-content: space-between; /* pushes title left, links right */
-  align-items: center;            /* vertical centering */
+  align-items: center; /* vertical centering */
   list-style: none;
   background: var(--primary-color);
   padding: 0.5rem 1rem;
   margin: 0;
 }
 
-
 .nav__link {
   display: inline-block;
-  padding: 2rem 1rem;  /* top/bottom | left/right */
+  padding: 2rem 1rem; /* top/bottom | left/right */
   color: white;
   text-decoration: none;
   font-weight: bold;
@@ -60,10 +67,10 @@ main{
 }
 
 .intro__photo {
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
-  object-fit: cover;
+  
 }
 .button {
   display: inline-block;
@@ -81,20 +88,23 @@ main{
   background-color: #0056b3; /* darker shade on hover */
 }
 
-.my-project{
+.my-project {
   text-align: center;
-  
 }
-
 .projects-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
   padding: 2rem;
   text-align: center;
-  font-family: cursive;
-}
+  }
 
+.project__image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 8px;
+}
 
 /* Contact section */
 /* Contact section */
@@ -104,7 +114,7 @@ main{
   padding: 2rem;
   background: rgb(226, 221, 221);
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   color: black;
 }
 
@@ -116,11 +126,10 @@ main{
 .contact-me p a {
   text-decoration: none;
   color: var(--primary-color);
-  font-weight: bold
+  font-weight: bold;
 }
 
 .contact-me p a:hover {
-
   text-decoration: underline;
 }
 
@@ -128,7 +137,7 @@ main{
 form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;  /* replaces <br><br> */
+  gap: 1rem; /* replaces <br><br> */
 }
 
 form label {
@@ -158,7 +167,6 @@ form textarea {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
- 
 }
 
 .button:hover {
